--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hexabot-plugin-chatgpt",
   "version": "2.0.1",
   "description": "The OpenAI ChatGPT Plugin for Hexabot Chatbot / Agent Builder to enable the LLM RAG Capability",
+  "scripts": {
+    "release": "npm version patch && git push origin --tags && npm publish"
+  },
   "dependencies": {
     "hexabot-helper-chatgpt": "^2.0.0"
   },
