--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "2.2.0",
   "description": "The OpenAI ChatGPT Plugin for Hexabot Chatbot / Agent Builder to enable the LLM RAG Capability",
   "scripts": {
-    "release": "npm version patch && git push origin --tags && npm publish"
+    "release:patch": "npm version patch && git push origin main --tags",
+    "release:minor": "npm version minor && git push origin main --tags"
   },
   "dependencies": {
     "hexabot-helper-chatgpt": "^2.0.0"
