fix: bump peer deps

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "release:patch": "npm version patch && git push origin main --tags",
     "release:minor": "npm version minor && git push origin main --tags"
   },
-  "dependencies": {
-    "hexabot-helper-chatgpt": "^2.2.1"
+  "peerDependencies": {
+    "hexabot-helper-chatgpt": "^2.2.2"
   },
   "author": "Hexastack",
   "license": "AGPL-3.0-only"
